# progetto-finale-lab

./: .gitignore  CMakeLists.txt  README.txt
include/: Casella.h  Giocatore.h  GiocatoreComputer.h  GiocatoreUmano.h  Gioco.h  InvalidTipoCasella.h  InvalidUpgrade.h  Tabellone.h  Terreno.h  TerrenoEconomico.h  TerrenoLusso.h  TerrenoStandard.h  TipoCasella.h  Upgrade.h
src/: Casella.cpp  Giocatore.cpp  GiocatoreComputer.cpp  GiocatoreUmano.cpp  Gioco.cpp  Tabellone.cpp  Terreno.cpp  main.cpp
